--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "nodemon index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,9 @@
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "chai": "^4.2.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
