--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
-    "test": "mocha --require @babel/register test/*.js"
+    "test": "mocha --require @babel/register test/*.js --exit"
   },
   "repository": {
     "type": "git",
