--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
-    "test": "mocha --require @babel/register test/*.js --exit"
+    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register test/*.js --exit",
+    "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
+    "coveralls-coverage": "coveralls < lcov.info",
+    "coverage": "nyc npm test && npm run generate-lcov && yarn run coveralls-coverage && npm run codeclimate-coverage",
+    
   },
   "repository": {
     "type": "git",
