--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "test": "nyc --reporter=html --reporter=text mocha --require @babel/register test/*.js --exit",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
-    "coverage": "nyc npm test && npm run generate-lcov && yarn run coveralls-coverage && npm run codeclimate-coverage",
+    "coverage": "nyc npm test && npm run generate-lcov && yarn run coveralls-coverage && npm run codeclimate-coverage"
     
   },
   "repository": {
