--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "dotenv": "^6.2.0",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.42.0",
-    "@babel/core": "^7.3.3",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1"
+    "sequelize": "^4.42.0"
   },
+
   "devDependencies": {
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "coveralls": "^3.0.3",
