--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,17 @@ language: node_js
 node_js:
   - "stable"
 env:
-  - CODECLIMATE_REPO_TOKEN=801645cdf755426e8d793a43bcf378c1a9483052c4f5421eb1fc5b7eea5a9d50
+  global:
+  - CODECLIMATE_REPO_TOKEN=ba0c0cc5dd583bdd9c8aaa5f8f3ef0f482b9c316a386ded68ddd8da424c2537a
 cache:
   directories:
-    - "/api/node_modules"
-    - "/frontend/node_modules"
-before_install: cd api/
+    - "node_modules"
+before_install: cd ./api
+install:
+  - npm install
 script:
-  - "npm run test"
+  - npm run test
 after_success:
-- npm run coverage
-- npm run coveralls
-- npm run report-coverage
-- ./node_modules/.bin/mocha
+  - npm run coverage
+
+
